--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@
   gap: -90px;
 }
 
+/* student portal Section */
+#school-portal {
+  height: 230px;
+  overflow-y: scroll;
+  border: 2px solid #ddd;
+  padding: 10px;
+  border-radius: 10px;
+}
 @media (max-width: 768px) {
   .mobile-card {
     display: flex;
