--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
 }
 
 /* act-btn section from the htlm section */
-.act-btn {
+/* .act-btn {
   position: relative;
   top: 54px;
-}
+} */
 
 /* Hero image styling */
 .hero-img {
@@ -62,6 +62,15 @@
   border: 2px solid #ddd;
   padding: 10px;
   border-radius: 10px;
+  box-shadow: 5px 8px 5px 2px rgba(0, 0, 0, 0.2);
+}
+#team-detail {
+  height: 230px;
+  overflow-y: scroll;
+  border: 2px solid #ddd;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 5px 8px 5px 2px rgba(0, 0, 0, 0.2);
 }
 @media (max-width: 768px) {
   .mobile-card {
@@ -92,10 +101,10 @@
     /* border-radius: 10px; */
   }
 
-  .act-btn {
+  /* .act-btn {
     position: relative;
     top: 6px;
-  }
+  } */
   #card {
     text-align: center;
     width: 100%;
