--- a/style.css
+++ b/style.css
@@ -75,6 +75,15 @@
 }
 
 /* Extral small screen */
+@media (max-width: 320px) {
+  .mobile-card {
+    position: fixed;
+    top: 400px;
+    width: 300px;
+    left: 160px;
+    background-color: red;
+  }
+}
 @media (max-width: 375px) {
   .mobile-card {
     position: fixed;
