--- a/style.css
+++ b/style.css
@@ -29,6 +29,64 @@
 #footer-container {
   padding: 10px 0px 80px 0px;
 }
+
+/* modal Section */
+.modal-container {
+  margin-top: 10px;
+  border: 2px soild red;
+  height: 200px;
+  width: 320px;
+  margin-left: 28px;
+  border-radius: 10px;
+  background-color: rgb(194, 192, 192);
+  position: fixed;
+  top: 106px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  visibility: hidden;
+}
+
+.modal-con {
+  display: flex;
+  flex-direction: column;
+}
+.modal-con h2 {
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 30px;
+  margin: 16px 0px;
+}
+.modal-con h4 {
+  text-align: center;
+  color: green;
+  font-weight: bold;
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+.modal-btn {
+  color: wheat;
+  font-weight: bolder;
+  font-size: 18px;
+  border-radius: 10px;
+  margin-bottom: 8px;
+  text-align: center;
+  padding: 10px;
+  background-color: #0d6efd;
+  border: none;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.modal-btn:hover {
+  background-color: #2979f2;
+}
+
+/* show-modal */
+.show-modal {
+  visibility: visible;
+}
 /* Mobile Card */
 .mobile-card {
   position: fixed;
@@ -52,7 +110,7 @@
 .min-card-content {
   display: flex;
   flex-direction: column;
-  gap: -90px;
+  gap: -100px;
 }
 
 /* student portal Section */
@@ -75,7 +133,7 @@
 }
 
 /* Extral small screen */
-@media (max-width: 320px) {
+/* @media (max-width: 320px) {
   .mobile-card {
     position: fixed;
     top: 400px;
@@ -83,13 +141,18 @@
     left: 160px;
     background-color: red;
   }
-}
+} */
 @media (max-width: 375px) {
+  /* modal con */
+  .modal-container {
+    /* visibility: hidden; */
+  }
   .mobile-card {
     position: fixed;
     top: 400px;
     width: 500px;
     left: 194px;
+    /* background-color: green; */
   }
 }
 /* @small screen */
