--- a/style.css
+++ b/style.css
@@ -42,6 +42,23 @@
   visibility: hidden;
 }
 
+/* CLOSING CARD @MOBILE VIEW */
+
+.close-card {
+  color: red;
+  position: absolute;
+  top: 0;
+  right: 8px;
+  font-size: 24px;
+  border-radius: 100%;
+  padding: 8px;
+  text-transform: lowercase;
+}
+
+.close-card:hover {
+  /* background-color: rgb(247, 245, 245); */
+  cursor: pointer;
+}
 .modal-con {
   display: flex;
   flex-direction: column;
